--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -48,8 +48,7 @@
 
     <application
 		android:icon="@drawable/app_icon"
-        android:label="@string/app_name"
-        android:debuggable="true">
+        android:label="@string/app_name">
 		
         <activity
             android:name="com.fuelpowered.lib.propeller.unity.PropellerUnityActivity" 
